--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -341,6 +341,7 @@
         
           
         <button onclick=" artistas.graficarArtistas()">Mostrar todas las canciones</button>
+        <button id="ascendente" onclick="artistas.ascendenteArtistas();alert('Cambio realizado con exito !')" > Ordenar de manera ascendete</button>
         <div class="center" id="lienzoArtistas2" ></div>
       </div>
 
